--- a/amazon.html
+++ b/amazon.html
@@ -57,8 +57,8 @@
       </div>
     </div>
 
-    <!-- <script src="data/cart.js"></script> -->
-    <script src="data/products.js"></script>
+    <!--  <script src="data/cart.js"></script>      -->
+    <!--  <script src="data/products.js"></script>  -->
     <script type="module" src="script/amazone.js"></script>
   </body>
 </html>
