--- a/checkout.html
+++ b/checkout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Checkout</title>
+    <title>lessons Checkout</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
@@ -24,8 +24,8 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
+          Checkout (<a class="return-to-home-link js-order-items-quantity"
+            href="amazon.html"></a>)
         </div>
 
         <div class="checkout-header-right-section">
