--- a/checkout.html
+++ b/checkout.html
@@ -76,6 +76,21 @@
           </button>
         </div>
       </div>
+      <!--
+      <div class="delivery-option">
+          <input type="radio"
+            class="delivery-option-input"
+            name="delivery-option-${matchgItem.id}">
+          <div>
+            <div class="delivery-option-date">
+              Monday, June 13
+            </div>
+            <div class="delivery-option-price">
+              $9.99 - Shipping
+            </div>
+          </div>
+        </div>
+      -->
     </div>
 
     <script type="module" src="script/checkout.js"></script>
