--- a/tracking.html
+++ b/tracking.html
@@ -52,8 +52,32 @@
     </div>
 
     <div class="main">
-      <div class="order-tracking">
-        <a class="back-to-orders-link link-primary" href="orders.html">
+      <div class="order-tracking js-order-tracking">
+      </div>
+    </div>
+
+    <script src="script/tracking.js" type="module">
+/*
+      const a = new URL(window.location.href)
+      const b = a.searchParams.get('orderId');
+      console.log(b);
+      const c = a.searchParams.get('productId');
+      console.log(c);
+      // src="script/tracking.js" type="module" */
+      
+      /*
+      const url = new URL(window.location.href);
+
+      console.log(url.searchParams.get('orderId'));
+      console.log(url.searchParams.get('productId'));*/
+
+      //http://127.0.0.1:5501/tracking.html?%20%20%20%20%20%20%20%20%20%20orderId=47f1f92e-c181-4746-8121-76a1b160222a&productId=3fdfe8d6-9a15-4979-b459-585b0d0545b9
+      
+    </script>
+
+    <!--
+
+     <a class="back-to-orders-link link-primary" href="orders.html">
           View all orders
         </a>
 
@@ -86,7 +110,7 @@
         <div class="progress-bar-container">
           <div class="progress-bar"></div>
         </div>
-      </div>
-    </div>
+
+    -->
   </body>
 </html>
